--- a/code_/input.sass
+++ b/code_/input.sass
@@ -1,3 +1,31 @@
-.container
-    margin: 0, auto
-    max-width: 1700px
+
+.header
+    margin: 0 auto
+    width: 100%
+    max-width: 1100px
+    display: flex
+    justify-content: space-between
+    align-items: center
+    box-sizing: border-box
+
+.header-logo
+    background-image: url("../parts_/logo.svg")
+    width: 58px
+    height: 58px
+    background-repeat: no-repeat
+
+.nav-menu-unit-link
+    text-decoration: none
+    font-size: 14px
+    color: #2b2b2b
+    padding: 5px 13px 5px 13px
+    margin-left: 30px
+    background-color: white
+    font-family: sans-serif
+    font-style: normal
+    font-weight: bold
+
+.header-menu
+    display: flex
+    justify-content: start
+    margin-top: 50px
