--- a/code_/input.sass
+++ b/code_/input.sass
@@ -9,6 +9,7 @@
     box-sizing: border-box
 
 .header-logo
+    margin-top: 55px
     background-image: url("../parts_/logo.svg")
     width: 58px
     height: 58px
