--- a/code_/input.sass
+++ b/code_/input.sass
@@ -37,3 +37,32 @@
     display: flex
     justify-content: start
     margin-top: 50px
+
+.registration-container
+    background-color: #709dca
+    background-size: cover
+
+.registration-container-info
+    margin: 0 auto
+    width: 100%
+    max-width: 1100px
+    text-align: center
+
+.registration-container-title
+    padding-top: 110px
+    color: #ffffff
+    font-family: sans-serif
+    font-size: 35px
+    font-weight: bold
+    letter-spacing: -0.88px
+
+.registration-container-text
+    color: #ffffff
+    font-family: sans-serif
+    font-size: 16px
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.5
+    letter-spacing: normal
+    text-align: center
+    font-weight: bold
