--- a/code_/input.sass
+++ b/code_/input.sass
@@ -47,6 +47,7 @@
     width: 100%
     max-width: 1100px
     text-align: center
+    align-items: center
 
 .registration-container-title
     padding-top: 110px
@@ -66,3 +67,23 @@
     letter-spacing: normal
     text-align: center
     font-weight: bold
+
+.registration-notebook-pic
+    margin: 60px 0 0 0
+    display: inline-block
+    width: 647px
+    height: 343px
+    background-image: url("../parts_/laptop.png")
+
+.registration-container-registration-section
+    margin-top: 65px
+
+.registration-button
+    border: none
+    cursor: pointer
+    background-color: #ffbb42
+    width: 211px
+    height: 46px
+    border-radius: 4px
+    font-size: 14px
+    color: white
