--- a/code_/input.sass
+++ b/code_/input.sass
@@ -77,13 +77,31 @@
 
 .registration-container-registration-section
     margin-top: 65px
-
+    display: flex
+    justify-content: space-between
+    align-items: center
 .registration-button
     border: none
     cursor: pointer
+    font-weight: bold
     background-color: #ffbb42
     width: 211px
-    height: 46px
-    border-radius: 4px
+    height: 44px
+    border-radius: 2px
     font-size: 14px
     color: white
+
+input
+    border: none
+    width: 250px
+    height: 44px
+    border-radius: 2px
+    font-size: 16px
+    color: #a9a9a9
+    resize: none
+
+.name-field
+    background-image: url("../parts_/name.png")
+    background-position: 15px 15px
+    background-repeat: no-repeat
+    padding-left: 40px
