registration field final

--- a/code_/input.sass
+++ b/code_/input.sass
@@ -80,6 +80,8 @@
     display: flex
     justify-content: space-between
     align-items: center
+    gap: 20px
+
 .registration-button
     border: none
     cursor: pointer
@@ -94,7 +96,7 @@
 input
     border: none
     width: 250px
-    height: 44px
+    height: 42px
     border-radius: 2px
     font-size: 16px
     color: #a9a9a9
@@ -103,5 +105,17 @@ input
 .name-field
     background-image: url("../parts_/name.png")
     background-position: 15px 15px
+    background-repeat: no-repeat
+    padding-left: 40px
+
+.email-field
+    background-image: url("../parts_/mail.png")
+    background-position: 15px 16px
+    background-repeat: no-repeat
+    padding-left: 40px
+
+.phone-field
+    background-image: url("../parts_/phone.png")
+    background-position: 15px 16px
     background-repeat: no-repeat
     padding-left: 40px
