--- a/code_/output.css
+++ b/code_/output.css
@@ -89,6 +89,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
 
 .registration-button {
@@ -106,7 +107,7 @@
 input {
   border: none;
   width: 250px;
-  height: 44px;
+  height: 42px;
   border-radius: 2px;
   font-size: 16px;
   color: #a9a9a9;
@@ -116,6 +117,20 @@ input {
 .name-field {
   background-image: url("../parts_/name.png");
   background-position: 15px 15px;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+
+.email-field {
+  background-image: url("../parts_/mail.png");
+  background-position: 15px 16px;
+  background-repeat: no-repeat;
+  padding-left: 40px;
+}
+
+.phone-field {
+  background-image: url("../parts_/phone.png");
+  background-position: 15px 16px;
   background-repeat: no-repeat;
   padding-left: 40px;
 }
