radio section final

--- a/code_/input.sass
+++ b/code_/input.sass
@@ -41,6 +41,7 @@
 .registration-container
     background-color: #709dca
     background-size: cover
+    height: 600px
 
 .registration-container-info
     margin: 0 auto
@@ -69,11 +70,12 @@
     font-weight: bold
 
 .registration-notebook-pic
-    margin: 60px 0 0 0
+    padding-bottom: 20px
     display: inline-block
     width: 647px
     height: 343px
     background-image: url("../parts_/laptop.png")
+    background-repeat: no-repeat
 
 .registration-container-registration-section
     margin-top: 65px
@@ -93,7 +95,7 @@
     font-size: 14px
     color: white
 
-input
+.registration
     border: none
     width: 250px
     height: 42px
@@ -119,3 +121,13 @@ input
     background-position: 15px 16px
     background-repeat: no-repeat
     padding-left: 40px
+
+.radio-scetion
+    position: relative
+
+.corusel-container
+    position: absolute
+    margin: 60px 0 0 220px
+
+.corusel-one
+    margin-top: 50px
