--- a/code_/output.css
+++ b/code_/output.css
@@ -45,6 +45,7 @@
 .registration-container {
   background-color: #709dca;
   background-size: cover;
+  height: 600px;
 }
 
 .registration-container-info {
@@ -77,11 +78,12 @@
 }
 
 .registration-notebook-pic {
-  margin: 60px 0 0 0;
+  padding-bottom: 20px;
   display: inline-block;
   width: 647px;
   height: 343px;
   background-image: url("../parts_/laptop.png");
+  background-repeat: no-repeat;
 }
 
 .registration-container-registration-section {
@@ -104,7 +106,7 @@
   color: white;
 }
 
-input {
+.registration {
   border: none;
   width: 250px;
   height: 42px;
@@ -133,6 +135,19 @@ input {
   background-position: 15px 16px;
   background-repeat: no-repeat;
   padding-left: 40px;
+}
+
+.radio-scetion {
+  position: relative;
+}
+
+.corusel-container {
+  position: absolute;
+  margin: 60px 0 0 220px;
+}
+
+.corusel-one {
+  margin-top: 50px;
 }
 
 /*# sourceMappingURL=output.css.map */
