--- a/code_/input.sass
+++ b/code_/input.sass
@@ -156,5 +156,40 @@
     font-weight: 900
     letter-spacing: -0.75px
 
-.our.cervices-card
+.our-services-text-info
+    color: #394b50
+    font-family: sans-serif
+    font-size: 16px
+    line-height: 22px
+
+.our-services-card
+    padding: 90px 10px 10px 10px
+    display: flex
+    justify-content: flex-start
+    align-items: center
+
+.our-services-info
     flex-basis: calc(100% - 120px)
+
+.pic-container
+    flex-basis: 90px
+
+.our-services-info-title
+    text-transform: uppercase
+    color: #394b50
+    font-weight: bold
+    font-size: 16px
+    font-family: sans-serif
+
+.our-services-info-text
+    display: inline-block
+    padding-top: 20px
+    ont-family: OpenSans
+    font-size: 13px
+    font-weight: normal
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.69
+    letter-spacing: normal
+    text-align: left
+    color: #7b7b7b
