about us text 1.0

--- a/code_/input.sass
+++ b/code_/input.sass
@@ -193,3 +193,22 @@
     letter-spacing: normal
     text-align: left
     color: #7b7b7b
+
+.about-us-container
+    margin-top: 150px
+    display: flex
+    background-color: #ffc155
+    background-size: cover
+
+.about-us-pic
+    height: 623px
+    object-fit: cover
+
+.about-us
+    margin: 0 auto
+    width: 100%
+    max-width: 1700px
+    display: flex
+
+.about-us-text-info
+    width: 50%
