--- a/code_/output.css
+++ b/code_/output.css
@@ -8,6 +8,10 @@
   box-sizing: border-box;
 }
 
+button:hover {
+  opacity: 0.6;
+}
+
 .header-logo {
   margin-top: 55px;
   background-image: url("../parts_/logo.svg");
@@ -289,6 +293,142 @@
   color: #ffffff;
   text-transform: uppercase;
   padding: 20px 35px 20px 35px;
+}
+
+.price-container-background {
+  background-color: #e7edf3;
+  background-size: cover;
+}
+
+.price-content {
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1200px;
+}
+
+.price-text-info {
+  text-align: center;
+  padding: 140px 0 50px 0;
+}
+
+.price-title {
+  font-family: sans-serif;
+  font-size: 30px;
+  font-weight: 900;
+  letter-spacing: -0.75px;
+  color: #394b50;
+  text-transform: uppercase;
+}
+
+.price-text {
+  font-family: sans-serif;
+  font-size: 18px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.22;
+  letter-spacing: normal;
+  text-align: center;
+  color: #75888d;
+}
+
+.price-card-container {
+  display: flex;
+  align-items: row;
+  justify-content: space-around;
+  padding-bottom: 165px;
+}
+
+.price-card {
+  background-color: white;
+  padding: 40px 100px 40px 100px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.price-card:hover {
+  background-color: #709dca;
+  cursor: pointer;
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 1s;
+}
+
+.card-title {
+  font-family: sans-serif;
+  font-size: 25px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 0.88;
+  letter-spacing: normal;
+  text-align: center;
+  color: #818b95;
+  text-transform: uppercase;
+}
+
+.card-price-container {
+  text-align: center;
+}
+
+.card-price-info {
+  display: inline-block;
+  margin-top: 30px;
+  font-size: 60px;
+  font-family: sans-serif;
+  color: #ffbb42;
+  font-weight: bold;
+}
+
+.price-card-button {
+  margin-top: 35px;
+  padding: 16px 21px 16px 21px;
+  cursor: pointer;
+  border-radius: 2px;
+  border: solid 1px #e7ad48;
+  background-color: #ffbb42;
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: normal;
+  color: #ffffff;
+  text-transform: uppercase;
+}
+
+.pcard-price-description-text {
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 2.86;
+  letter-spacing: normal;
+  text-align: center;
+  color: #b5bbc1;
+  text-transform: uppercase;
+}
+
+.card-price-description {
+  margin-top: 50px;
+}
+
+.card-price-text {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 300;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.1;
+  letter-spacing: normal;
+  text-align: center;
+  color: #818b95;
+  text-transform: uppercase;
 }
 
 /*# sourceMappingURL=output.css.map */
