--- a/code_/input.sass
+++ b/code_/input.sass
@@ -304,6 +304,8 @@ button:hover
     flex-direction: column
     justify-content: center
     align-items: center
+    border-radius: 3px
+    border: solid 1px #ccd5df
 
 .price-card:hover
     background-color: #709dca
@@ -312,6 +314,14 @@ button:hover
     -ms-transform: scale(1.2)
     transform: scale(1.2)
     transition: 1s
+    .card-title
+        color: white
+    .card-price-info
+        color: white
+    .card-price-text
+        color: white
+    .pcard-price-description-text
+        color: white
 
 .card-title
     font-family: sans-serif
@@ -379,3 +389,43 @@ button:hover
     text-align: center
     color: #818b95
     text-transform: uppercase
+
+.how-it-works-content
+    margin: 0 auto
+    max-width: 1100px
+    width: 100%
+
+.how-it-works-text
+    margin-top: 150px
+    text-align: center
+
+.how-it-works-title
+    text-transform: uppercase
+    color: #394b50
+    font-family: sans-serif
+    font-size: 30px
+    font-weight: 900
+    letter-spacing: -0.75px
+
+.how-it-works-text-title
+    font-family: sans-serif
+    font-size: 18px
+    font-weight: 300
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.22
+    letter-spacing: normal
+    text-align: center
+    color: #394b50
+
+.how-it-works-steps
+    display: flex
+
+.step-card
+    max-width: 220px
+    display: flex
+    align-items: center
+    flex-direction: column
+
+.step-card-text-info
+    text-align: center
