--- a/code_/input.sass
+++ b/code_/input.sass
@@ -364,6 +364,8 @@ button:hover
     text-transform: uppercase
 
 .pcard-price-description-text
+    padding-top: 8px
+    border-top: 1px solid #e2e9f0
     font-family: sans-serif
     font-size: 14px
     font-weight: normal
