--- a/code_/input.sass
+++ b/code_/input.sass
@@ -421,13 +421,88 @@ button:hover
     color: #394b50
 
 .how-it-works-steps
+    margin-top: 80px
     display: flex
 
 .step-card
+    margin-top: 45px
     max-width: 220px
     display: flex
     align-items: center
     flex-direction: column
 
 .step-card-text-info
+    margin-top: 100px
     text-align: center
+
+.step-card-title
+    color: #394b50
+    text-transform: uppercase
+    font-family: sans-serif
+    font-size: 20px
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.1
+    letter-spacing: normal
+    text-align: center
+
+.step-card-text
+    font-family: sans-serif
+    font-size: 13px
+    font-weight: normal
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.69
+    letter-spacing: normal
+    text-align: center
+    color: #7b7b7b
+
+.step-arrow-middle
+    margin-top: 120px
+
+.steps-button
+    cursor: pointer
+    margin-top: 90px
+    background-color: #ffbb42
+    width: 170px
+    height: 50px
+    border-radius: 2px
+    border: solid 1px #e7ad48
+    font-family: sans-serif
+    font-size: 14px
+    font-weight: normal
+    font-stretch: normal
+    font-style: normal
+    line-height: normal
+    letter-spacing: normal
+    color: #ffffff
+
+.button-container
+    margin: 0 auto
+    max-width: 1100px
+    width: 100%
+    display: flex
+    justify-content: center
+
+.happy-clients-section
+    margin-top: 150px
+    background-color: #ffc155
+    background-size: cover
+
+.happy-clients-info
+
+    margin: 0 auto
+    width: 100%
+    max-width: 1100px
+
+.happy-clients-text-section
+    text-align: center
+    padding: 140px 0 58px 0
+
+.happy-clients-title
+    font-family: sans-serif
+    font-size: 30px
+    font-weight: 900
+    letter-spacing: -0.75px
+    text-transform: uppercase
+    color: white
