--- a/code_/output.css
+++ b/code_/output.css
@@ -449,7 +449,7 @@ button:hover {
 
 .how-it-works-content {
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1200px;
   width: 100%;
 }
 
@@ -545,7 +545,7 @@ button:hover {
 
 .button-container {
   margin: 0 auto;
-  max-width: 1100px;
+  max-width: 1300px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -568,6 +568,18 @@ button:hover {
   padding: 140px 0 58px 0;
 }
 
+.client-card-img-container {
+  padding-right: 30px;
+}
+
+.clients-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  gap: 20px 25px;
+  padding-bottom: 150px;
+}
+
 .happy-clients-title {
   font-family: sans-serif;
   font-size: 30px;
@@ -575,6 +587,63 @@ button:hover {
   letter-spacing: -0.75px;
   text-transform: uppercase;
   color: white;
+}
+
+.happy-clients-text {
+  font-family: sans-serif;
+  font-size: 16px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.38;
+  letter-spacing: normal;
+  color: #ffffff;
+}
+
+.client-card {
+  display: flex;
+  background-color: white;
+  padding: 40px 40px 50px 30px;
+}
+
+.client-card:hover {
+  -webkit-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  transform: scale(1.2);
+  transition: 1s;
+}
+
+.client-card-text-info {
+  font-family: sans-serif;
+  font-size: 13px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.69;
+  letter-spacing: normal;
+  color: #7b7b7b;
+}
+
+.client-card-text-bio {
+  margin-top: 30px;
+  display: inline-block;
+}
+
+.client-card-text-bio {
+  font-family: sans-serif;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
+  letter-spacing: normal;
+  text-align: left;
+  color: #99a9ae;
+  text-transform: uppercase;
+}
+
+.special-text-bio {
+  color: #f6772c;
 }
 
 /*# sourceMappingURL=output.css.map */
