--- a/code_/input.sass
+++ b/code_/input.sass
@@ -25,13 +25,13 @@ button:hover
     padding: 5px 13px 5px 13px
     margin-left: 15px
     background-color: white
-    font-family: Lato
+    font-family: sans-serif
     text-transform: uppercase
     font-size: 14px
 
 .nav-menu-unit-link:hover
     background-color: #ffbb42
-    padding: 5px 13px 5px 13px
+    padding: 7px 13px 5px 13px
     text-align: center
     border-radius: 5px
     color: white
