--- a/code_/input.sass
+++ b/code_/input.sass
@@ -565,3 +565,33 @@ button:hover
 
 .special-text-bio
     color: #f6772c
+
+.news-info-block
+    margin: 150px auto
+    width: 100%
+    max-width: 1100px
+    text-align: center
+    align-items: center
+
+.news-info-text-title
+    text-transform: uppercase
+    font-family: sans-serif
+    font-weight: bold
+    font-size: 16px
+    font-weight: 900
+    color: #394b50
+    letter-spacing: -0.75px
+
+.news-info-text-descr
+    ont-family: OpenSans
+    font-size: 16px
+    font-weight: 300
+    font-stretch: normal
+    font-style: normal
+    line-height: 1.38
+    letter-spacing: normal
+    text-align: center
+    color: #394b50
+
+.input-type-container
+    margin: 0 auto
