--- a/code_/input.sass
+++ b/code_/input.sass
@@ -593,5 +593,44 @@ button:hover
     text-align: center
     color: #394b50
 
-.input-type-container
+.news-container
     margin: 0 auto
+    width: 100%
+    max-width: 980px
+    text-align: center
+    align-items: center
+
+.input-type-container
+    display: flex
+    justify-content: space-between
+    align-items: center
+
+.info-name
+    width: 308px
+    border: solid 1px #cbcbcb
+    background-color: #ffffff
+
+.info-email-address
+    width: 388px
+    border-radius: 2px
+    border: solid 1px #cbcbcb
+    background-color: #ffffff
+
+.email-button
+    border: none
+    width: 226px
+    height: 45px
+    border-radius: 2px
+    font-size: 14px
+    color: white
+    font-weight: bold
+    cursor: pointer
+    background-color: #ffbb42
+
+.news
+    border: solid 1px #cbcbcb
+    height: 42px
+    border-radius: 2px
+    font-size: 16px
+    color: #a9a9a9
+    resize: none
