--- a/code_/input.sass
+++ b/code_/input.sass
@@ -654,7 +654,9 @@ button:hover
     height: 550px
 
 .contact-shape
-    background-image: url("../parts_/newsf.svg")
-    background-repeat: no-repeat
-    width: 40px
-    height: 40px
+    display: flex
+    justify-content: center
+
+.pic-contact-info
+    display: inline-block
+    margin-top: 40px
