--- a/code_/output.css
+++ b/code_/output.css
@@ -745,10 +745,13 @@ button:hover {
 }
 
 .contact-shape {
-  background-image: url("../parts_/newsf.svg");
-  background-repeat: no-repeat;
-  width: 40px;
-  height: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.pic-contact-info {
+  display: inline-block;
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=output.css.map */
