--- a/code_/output.css
+++ b/code_/output.css
@@ -754,4 +754,8 @@ button:hover {
   margin-top: 40px;
 }
 
+.contact-into-container {
+  margin: 0 auto;
+}
+
 /*# sourceMappingURL=output.css.map */
